--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -5,6 +5,8 @@
   background-color: #fff;
   padding: 0.7em 1.7em;
   border: none;
+  transition: ease;
+  transition-duration: 80ms;
 }
 
 .btn__normal:hover {
@@ -18,6 +20,23 @@
   padding: 0.7em 1.7em;
   background-color: white;
   border: solid 2px #3aae84;
+  transition: ease;
+  transition-duration: 80ms;
+}
+.btn__outline-black {
+  font-size: 14pt;
+  color: #000;
+  padding: 0.7em 1.7em;
+  background-color: white;
+  border: 2px solid #000;
+  transition: ease;
+  transition-duration: 80ms;
+}
+.btn__outline-black:hover {
+  background-color: #3aae84;
+  color: #fff;
+
+  border: 2px solid #fff;
 }
 .btn__outline-green {
   font-size: 14pt;
@@ -25,10 +44,12 @@
   padding: 0.7em 1.7em;
   background-color: white;
   border: 2px solid #3aae84;
+  transition: ease;
+  transition-duration: 80ms;
 }
 .btn__outline-green:hover {
   background-color: #3aae84;
   color: #fff;
-  padding: 0.7em 1.7em;
+
   border: 2px solid #fff;
 }
