--- a/src/pages/landing/styles/heroView.css
+++ b/src/pages/landing/styles/heroView.css
@@ -11,7 +11,7 @@
 
 .hero__title {
   max-width: 12em;
-  font-size: 30pt;
+  font-size: 40px;
   font-weight: 900;
   text-align: center;
 }
@@ -19,17 +19,15 @@
 .hero__content {
   margin: 1em 0 1.5em 0;
   max-width: 20em;
-  font-size: 14pt;
+  font-size: 16px;
   text-align: center;
 }
 @media screen and (min-width: 100px) {
   .hero__title {
     margin: 0 0.8em;
-    text-align: left;
   }
   .hero__content {
     margin-left: 2em;
     margin-right: 2em;
-    text-align: left;
   }
 }
