--- a/src/pages/landing/styles/footer.css
+++ b/src/pages/landing/styles/footer.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 3em 0em;
+  padding: 3em 0em 1em 0;
   font-weight: 400;
   margin: 1em;
 }
@@ -11,4 +11,9 @@
 .footer__copywrite_container {
   margin: 2em 0em;
   text-align: center;
+}
+
+.footer__social {
+  display: flex;
+  justify-content: space-around;
 }
