--- a/src/pages/landing/styles/footer.css
+++ b/src/pages/landing/styles/footer.css
@@ -7,7 +7,11 @@
   font-weight: 400;
   margin: 1em;
 }
-
+.footer__container hr {
+  color: #9c9c9c;
+  margin: 0em 0em 1.6em 0em;
+  opacity: 20%;
+}
 .footer__copywrite_container {
   margin: 2em 0em;
   text-align: center;
