--- a/src/pages/landing/styles/heroView.css
+++ b/src/pages/landing/styles/heroView.css
@@ -31,3 +31,10 @@
     margin-right: 2em;
   }
 }
+@media screen and (min-width:100px) {
+  .hero {
+    background-color: #fff;
+    color:#000;
+    
+  }
+}
