--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -53,3 +53,11 @@
 
   border: 2px solid #fff;
 }
+
+@media screen and (min-width:1004px){
+  .btn__normal{
+    background-color: #3aae84;
+    color:#fff;
+    border-color: #3aae84;
+  }
+}
