--- a/src/pages/landing/styles/heroView.css
+++ b/src/pages/landing/styles/heroView.css
@@ -6,7 +6,16 @@
   min-height: 100vh;
   background-color: #3aae84;
   color: #fff;
-  padding: 0 0.2em;
+  /* padding: 0 0.2em; */
+}
+.hero__text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+
+
 }
 
 .hero__title {
@@ -17,12 +26,12 @@
 }
 
 .hero__content {
-  margin: 1em 0 1.5em 0;
   max-width: 20em;
+  margin: 1em 0 1.5em 0;
   font-size: 16px;
   text-align: center;
 }
-@media screen and (min-width: 100px) {
+@media screen and (max-width: 400px) {
   .hero__title {
     margin: 0 0.8em;
   }
@@ -31,10 +40,32 @@
     margin-right: 2em;
   }
 }
-@media screen and (min-width:100px) {
+@media screen and (min-width:1004px) {
   .hero {
-    background-color: #fff;
+    margin-top:2.9em;
+    background-color: #ffffff;
     color:#000;
-    
+    justify-content: flex-start;
+    align-items: flex-start;
+  flex-direction: row;
+  text-align: start;
+  
+ 
+  }
+  .hero__text {
+    margin-left: 7em ;
+    align-items: flex-start;
+    justify-items: flex-start;
+  }
+  .hero__title{
+    max-width: 10em;
+    font-size:57px;
+    text-align: left;
+  }
+
+  .hero__content {
+    width: 40em;
+    font-size: 18px;
+    text-align: left;
   }
 }
