--- a/src/pages/landing/styles/our-partners.css
+++ b/src/pages/landing/styles/our-partners.css
@@ -13,7 +13,6 @@
   width: 100%;
   height: 15em;
   padding: 3em 1.5em;
-
   box-shadow: 1.5px 2px 20px 1px rgb(0, 0, 0, 0.1);
 }
 
@@ -24,4 +23,9 @@
   justify-content: space-around;
   align-items: center;
   grid-auto-rows: repeat(auto-fit, minmax(5em, 1fr));
+}
+@media screens and(min-width:768px){
+  .our-partners__title {
+    font-size:
+  }
 }
