--- a/src/pages/landing/styles/what-we-do.css
+++ b/src/pages/landing/styles/what-we-do.css
@@ -7,12 +7,12 @@
 }
 .what-we-do__item{
 display: grid;
-grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
+grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
 grid-gap:1em;
-justify-content: space-around;
+text-align: center;
+/* justify-content: center; */
 align-items: center;
 grid-template-rows: repeat(auto-fit, minmax(10em, 1fr));
-text-align: center;
 }
 .what-we-do__ {
   font-size: 16px;
