fix hero button initial state color

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -23,7 +23,7 @@
   color: #3aae84;
   background-color: #fff;
   padding: 0.7em 1.6em;
-  border: 2px solid #fff;
+  border: 2px solid #3aae84;
   transition: ease;
   transition-duration: 80ms;
 }
