--- a/src/pages/landing/styles/what-we-do.css
+++ b/src/pages/landing/styles/what-we-do.css
@@ -41,7 +41,7 @@ grid-template-rows: repeat(auto-fit, minmax(10em, 1fr));
 .what-we-do__hackerthons {
   height: 60px;
 }
-@media screen and (min-width:768px){
+@media screen and (min-width:540px){
   .what-we-do__section__title{
     font-size: 1.5em;
     margin-bottom:1.5em;
@@ -58,4 +58,7 @@ grid-template-rows: repeat(auto-fit, minmax(10em, 1fr));
     font-size: 1.2em;
    
   }
+}
+@media screen and (min-width:768px){
+ 
 }
