--- a/src/pages/landing/styles/hero-view.css
+++ b/src/pages/landing/styles/hero-view.css
@@ -3,8 +3,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  min-height: 100vh;
-  max-width: 100%;
+  height: 100vh;
+  /* max-width: 100%; */
   background-color: #3aae84;
   color: #fff;
   /* padding: 0 0.2em; */
@@ -54,6 +54,7 @@
     background-color: #ffffff;
     color:#000;
     width: 90vw;
+    height: 70vh;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -97,7 +98,7 @@
     
     background-color: #ffffff;
     color:#000;
-    /* min-height: 70vh; */
+    height: 70vh;
     justify-content: start;
     margin-top:4em;
   }
@@ -131,7 +132,7 @@
     margin-top:2.9em;
     background-color: #ffffff;
     color:#000;
-    /* justify-content: space-around; */
+    height: auto;
     align-items: flex-start;
   flex-direction: row;
   text-align: start;
