--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -48,6 +48,9 @@
     justify-content: space-evenly;
     align-items: center;
   }
+  /* .nav__link:hover{
+    background-color: #e0e0e0;
+  } */
   .nav__item {
     color: white;
     display: flex;
@@ -57,6 +60,8 @@
     text-decoration: none;
     color: #000;
   }
+
+
 }
 @media screen and (max-width: 250px) {
   .nav__menu {
