--- a/src/components/nav-list/nav-list.css
+++ b/src/components/nav-list/nav-list.css
@@ -12,22 +12,24 @@
 
 }
 .footer__item a:hover{
-
   color: #fff;
   background-color:#3aae84;
-
 }
 .nav__list {
   display: flex;
   flex-direction: row;
   align-items: center;
+
+}
+.nav__list a:last-child{
+  margin:0 1em 0 0em;
 }
 .nav__list a{
   
   color: #000;
   font-size:13pt;
   text-decoration: none;
-  margin:0 0 0 1em;
+  margin:0 1em;
   padding:.5em 1em;
 }
 .nav__list a:hover{
