--- a/src/components/nav-list/nav-list.css
+++ b/src/components/nav-list/nav-list.css
@@ -17,7 +17,9 @@
 }
 .nav__list {
   display: flex;
-  flex-direction: row;
+  width: 100%;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
 
 }
@@ -25,7 +27,6 @@
   margin:0 1em 0 0em;
 }
 .nav__list a{
-  
   color: #000;
   font-size:13pt;
   text-decoration: none;
@@ -46,6 +47,12 @@
   
 }
 @media screen and (min-width:500px){
+  .nav__list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  
+  }
   .footer__item {
 font-size: 1.1em;
   }
