rearrenge and fix hover effect on contact us button top

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -15,7 +15,9 @@
   background-color: #3aae84;
   border: solid 2px #fff;
 }
-
+.a_link_button:hover {
+  background-color: #fff;
+}
 /* Normal button */
 .btn__normal {
   font-size: 20pt;
@@ -77,10 +79,10 @@
 
   border: 2px solid #fff;
 }
-@media screen and (min-width:768px){
-  .btn__normal{
+@media screen and (min-width: 768px) {
+  .btn__normal {
     background-color: #3aae84;
-    color:#fff;
+    color: #fff;
     border-color: #3aae84;
   }
   .btn__normal:hover {
