--- a/src/pages/landing/styles/footer.css
+++ b/src/pages/landing/styles/footer.css
@@ -1,12 +1,12 @@
 .footer__container {
-  background-color:#3aae84;
+  background-color: #354e45;
   color: #ffffff;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 3em 0em 1em 0;
+  /* padding: 3em 0em 1em 0; */
   font-weight: 400;
-  margin: 1em;
+  margin: 1em 0em 0em 0em;
 }
 .footer__container hr {
   color: #ffffff;
@@ -21,25 +21,28 @@
 .footer__copywrite_container {
   margin: 2em 0em;
   text-align: center;
+  order: 2;
 }
 
 .footer__social {
   display: flex;
+  margin-top: 1em;
   justify-content: space-around;
 }
 
-@media screen and (min-width:1004px){
-  .footer__container{
-    flex-direction:row;
-      justify-content:space-between;
-      align-items: center;
-      padding: 0;
-  font-weight: 400;
-  margin: 1em;
+@media screen and (min-width: 1004px) {
+  .footer__container {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0;
+    font-weight: 400;
+    margin: 1em 0 0 0;
   }
-  .footer__social {
-    /*margin-left:9em;*/
-  display: flex;
-  justify-content: space-between;
-}
+  .footer__copywrite_container {
+    order: 0;
+  }
+  .footer__social a {
+    margin: 0 2.3em;
+  }
 }
