--- a/src/components/nav-list/nav-list.css
+++ b/src/components/nav-list/nav-list.css
@@ -1,4 +1,4 @@
-.footer__item > a{
+.footer__item > a {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -6,14 +6,13 @@
 }
 
 .footer__item > a {
-  color: #9c9c9c;
-  text-decoration: none;
-  padding:.5em 1em;
-
-}
-.footer__item a:hover{
   color: #fff;
-  background-color:#3aae84;
+  text-decoration: none;
+  padding: 0.5em 1.4em;
+}
+.footer__item a:hover {
+  color: #fff;
+  background-color: #3aae84;
 }
 .nav__list {
   display: flex;
@@ -21,40 +20,38 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-
 }
-.nav__list a:last-child{
-  margin:0 1em 0 0em;
+.nav__list a:last-child {
+  margin: 0 1em 0 0em;
 }
-.nav__list a{
+.a_link_button:hover {
+  background-color: #fff;
+}
+.nav__list a {
   color: #000;
-  font-size:13pt;
+  font-size: 13pt;
   text-decoration: none;
-  margin:0 1em;
-  padding:.5em 1em;
+  margin: 0 1em;
+  padding: 0.5em 1em;
 }
-.nav__list a:hover{
+.nav__list a:hover {
   color: #fff;
-  background-color:#3aae84;
-
+  background-color: #3aae84;
 }
-@media screen and (min-width:400px){
+@media screen and (min-width: 400px) {
   .footer__item {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
   }
-  
 }
-@media screen and (min-width:500px){
+@media screen and (min-width: 500px) {
   .nav__list {
     display: flex;
     flex-direction: row;
     align-items: center;
-  
   }
   .footer__item {
-font-size: 1.1em;
+    font-size: 1.1em;
   }
-  
 }
