--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -19,10 +19,13 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.nav__list{
+.nav__brand_button {
+  border: none;
+}
+.nav__list {
   list-style: none;
 }
-.nav__web_view{
+.nav__web_view {
   display: none;
 }
 .nav__button {
@@ -38,14 +41,14 @@
   margin: 0;
 }
 .nav-container__list {
-width: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
   align-items: center;
-  margin-right:4em;
-  margin-bottom:1em;
+  margin-right: 4em;
+  margin-bottom: 1em;
 }
 
 @media screen and (min-width: 880px) {
@@ -56,10 +59,10 @@ width: 100%;
   .nav__menu {
     display: none;
   }
-  .nav__web_moblie{
+  .nav__web_moblie {
     display: none;
   }
-  .nav__web_view{
+  .nav__web_view {
     display: block;
   }
   .nav-container__list {
@@ -84,8 +87,6 @@ width: 100%;
     text-decoration: none;
     color: #000;
   }
-
-
 }
 @media screen and (max-width: 250px) {
   .nav__menu {
