--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -15,6 +15,9 @@
   background-color: #3aae84;
   border: solid 2px #fff;
 }
+.atag-style {
+  text-decoration: none;
+}
 .a_link_button:hover {
   background-color: #fff;
 }
