--- a/src/pages/landing/styles/what-we-do.css
+++ b/src/pages/landing/styles/what-we-do.css
@@ -1,6 +1,7 @@
 .what-we-do {
   margin-top:2.5em;
   width: 100%;
+  height:100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
