--- a/src/pages/landing/styles/what-we-do.css
+++ b/src/pages/landing/styles/what-we-do.css
@@ -1,20 +1,20 @@
 .what-we-do {
-  margin-top:2.5em;
+  margin-top: 2.5em;
   width: 100%;
-  height:100vh;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.what-we-do__item{
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
-grid-gap:1em;
-text-align: center;
-/* justify-content: center; */
-align-items: center;
-grid-template-rows: repeat(auto-fit, minmax(10em, 1fr));
+.what-we-do__item {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+  grid-gap: 1em;
+  text-align: center;
+  /* justify-content: center; */
+  align-items: center;
+  grid-template-rows: repeat(auto-fit, minmax(10em, 1fr));
 }
 .what-we-do__ {
   font-size: 16px;
@@ -43,24 +43,24 @@ grid-template-rows: repeat(auto-fit, minmax(10em, 1fr));
 .what-we-do__hackerthons {
   height: 60px;
 }
-@media screen and (min-width:540px){
-   .what-we-do__section__title{
+@media screen and (min-width: 540px) {
+  .what-we-do__section__title {
     font-size: 1.5em;
-    margin-bottom:1.5em;
+    margin-bottom: 1.5em;
   }
   .what-we-do__title {
-    margin-top:1em; 
+    margin-top: 1em;
     max-width: 19em;
     font-size: 2em;
     font-weight: 900;
     text-align: center;
   }
   .what-we-do__discription {
-   
     font-size: 1.2em;
-   
   }
 }
-@media screen and (min-width:768px){
- 
+@media screen and (min-width: 768px) {
+  .what-we-do {
+    height: 100vh;
+  }
 }
