--- a/src/pages/landing/styles/get-in-touch.css
+++ b/src/pages/landing/styles/get-in-touch.css
@@ -1,9 +1,8 @@
 .get-in-touch__container {
-  max-width: 100%;
+  max-width: 100vw;
   display: grid;
-  min-height:10vh;
- grid-template-columns: repeat(auto-fit, minmax(19em, 1fr));
- grid-template-rows: repeat(auto-fit, minmax(2em, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(19em, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(2em, 1fr));
   align-items: center;
   justify-content: space-around;
   text-align: center;
@@ -14,11 +13,11 @@
   border-radius: 1em;
   box-shadow: 1.5px 2px 20px 1px rgb(0, 0, 0, 0.3);
 }
-.get-in-touch__img img{
+.get-in-touch__img img {
   object-fit: contain;
   min-width: 10em;
-margin:0;
-padding:0;
+  margin: 0;
+  padding: 0;
   /* transform: translateX(-2em); */
 }
 
@@ -43,37 +42,35 @@ padding:0;
 }
 
 .get-in-touch__button {
-
 }
 
-@media screen and (min-width:560px){
-  .get-in-touch__container{
-    
+@media screen and (min-width: 560px) {
+  .get-in-touch__container {
     max-width: 100%;
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(2em, 1fr));;
+    grid-template-rows: repeat(auto-fit, minmax(2em, 1fr));
     /* justify-content: center;
     align-items: center; */
-    margin:0 3em;
-    padding-bottom:1em;
+    margin: 0 3em;
+    padding-bottom: 1em;
   }
   .get-in-touch-text--container {
     justify-content: center;
     align-items: center;
-    margin:0 0 2.5em;
+    margin: 0 0 2.5em;
     /* max-width:25em; */
-    text-align:center;
-  }.get-in-touch__title{
+    text-align: center;
+  }
+  .get-in-touch__title {
     font-size: 18px;
   }
   .get-in-touch__description {
     font-size: 20px;
-
   }
 }
-@media screen and (min-width:768px){
+@media screen and (min-width: 768px) {
   /* .get-in-touch__container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(5em, 1fr));
@@ -83,45 +80,43 @@ padding:0;
     padding:0 10em;
   } */
   .get-in-touch-text--container {
-    margin:1em;
-    
+    margin: 1em;
+
     /* padding:2em 0 0 10em; */
     /* max-width:100%; */
-    text-align:left;
-
-  }.get-in-touch__title{
-    margin-left:0;
+    text-align: left;
+  }
+  .get-in-touch__title {
+    margin-left: 0;
     max-width: 100%;
     font-size: 20px;
   }
   .get-in-touch__description {
-    margin-left:0;
+    margin-left: 0;
 
     font-size: 20px;
-    max-width:20em;
-
+    max-width: 20em;
   }
 }
-@media screen and (min-width:1004px) {
-  .get-in-touch__container{
+@media screen and (min-width: 1004px) {
+  .get-in-touch__container {
     display: flex;
     flex-flow: row-reverse;
     justify-content: space-around;
     align-content: space-around;
-    padding:0 10em;
+    padding: 0 10em;
   }
   .get-in-touch-text--container {
     /* margin-left:40em; */
     /* padding:2em 0 0 10em; */
-    width:30em;
-    text-align:left;
-
-  }.get-in-touch__title{
+    width: 30em;
+    text-align: left;
+  }
+  .get-in-touch__title {
     font-size: 20px;
   }
   .get-in-touch__description {
     font-size: 20px;
-    min-width:20em;
-
+    min-width: 20em;
   }
 }
