--- a/src/pages/learn_more/learn-more.css
+++ b/src/pages/learn_more/learn-more.css
@@ -1,14 +1,19 @@
 .learn_more__conatiner {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 100vh;
+  flex-direction: column-reverse;
+  /* justify-content: space-around; */
   align-items: center;
+  min-height: 100vh;
+  max-width: 100vw;
+  align-items: center;
+  margin: 4em 0.5em;
 }
 .learn_more__text {
+  margin: 1em;
   max-width: 23em;
 }
 .learn_more__text h1 {
+  margin: 0 0 0.2em 0;
   font-size: 40px;
   font-weight: 900;
 }
@@ -17,18 +22,39 @@
   font-size: 20px;
 }
 .learn_more__image {
+  object-fit: contain;
   max-height: 20em;
+  max-width: 17em;
+  /* margin: 0.3em; */
+}
+.learn_more__button a {
+  font-size: 13pt;
+}
+@media screen and (min-width: 400px) {
+  .learn_more__text {
+    margin: 3em;
+    max-width: 40em;
+  }
 }
 
 @media screen and (min-width: 1004px) {
   .learn_more__conatiner {
-    display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    height: 100vh;
+    justify-content: space-between;
+    margin-right: 3em;
+    margin-left: 3em;
+    margin-top: 0em;
     align-items: center;
   }
+  .learn_more__image {
+    max-height: 20em;
+    max-width: 34em;
+  }
+  .learn_more__button a {
+    font-size: 20pt;
+  }
+
   .learn_more__text {
-    max-width: 30em;
+    max-width: 35em;
   }
 }
