--- a/src/pages/learn_more/learn-more.css
+++ b/src/pages/learn_more/learn-more.css
@@ -3,7 +3,7 @@
   flex-direction: column-reverse;
   /* justify-content: space-around; */
   align-items: center;
-  min-height: 100vh;
+  min-height: calc(100vh - 20vh);
   max-width: 100vw;
   align-items: center;
   margin: 4em 0.5em;
