--- a/src/pages/landing/styles/get-in-touch.css
+++ b/src/pages/landing/styles/get-in-touch.css
@@ -41,20 +41,17 @@
   padding: 0;
 }
 
-.get-in-touch__button {
-}
-
-@media screen and (min-width: 560px) {
+@media screen and (min-width: 693px) {
   .get-in-touch__container {
-    max-width: 100%;
+    max-width: 100vw;
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(25em, 1fr)); */
     grid-template-rows: repeat(auto-fit, minmax(2em, 1fr));
     /* justify-content: center;
     align-items: center; */
     margin: 0 3em;
-    padding-bottom: 1em;
+    padding: 0 2em;
   }
   .get-in-touch-text--container {
     justify-content: center;
