--- a/src/components/footer/footer-mobile.css
+++ b/src/components/footer/footer-mobile.css
@@ -18,10 +18,21 @@
 .footer__social-nav_mobile {
   display: flex;
   width: 90vw;
+  margin-top: 2rem;
   flex-direction: row;
   justify-content: space-around;
   align-content: space-around;
   /* align-items: center; */
+}
+/* when on Different page */
+.footer__social-nav_mobile_diff_page {
+  display: flex;
+  width: 90vw;
+  margin-top: 2rem;
+  flex-direction: row;
+  justify-content: center;
+  align-content: space-around;
+  align-items: center;
 }
 .footer__container_mobile hr {
   color: #ffffff;
@@ -50,6 +61,7 @@
   flex-direction: column;
   /* justify-content: space-between; */
   align-content: space-between;
+
   align-items: flex-start;
   opacity: 60%;
   text-decoration: none;
