--- a/src/components/footer/footer-mobile.css
+++ b/src/components/footer/footer-mobile.css
@@ -16,23 +16,18 @@
   justify-content: space-around;
 }
 .footer__social-nav_mobile {
-  display: flex;
+  /* display: flex;
   width: 90vw;
-  margin-top: 2rem;
-  flex-direction: row;
-  justify-content: space-around;
-  align-content: space-around;
-  /* align-items: center; */
-}
-/* when on Different page */
-.footer__social-nav_mobile_diff_page {
-  display: flex;
-  width: 90vw;
-  margin-top: 2rem;
   flex-direction: row;
   justify-content: center;
-  align-content: space-around;
-  align-items: center;
+  align-content: space-between;
+  margin-top: 1.5rem; */
+  /* align-items: center; */
+  width: 90vw;
+  padding-top: 2em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 .footer__container_mobile hr {
   color: #ffffff;
@@ -61,7 +56,6 @@
   flex-direction: column;
   /* justify-content: space-between; */
   align-content: space-between;
-
   align-items: flex-start;
   opacity: 60%;
   text-decoration: none;
