--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,14 +3,22 @@
   color: #ffffff;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+
   font-weight: 400;
   padding: 1em;
   margin: 1em 0em 0em 0em;
 }
 .footer__container hr {
   color: #ffffff;
-  margin: 0em 0em 1.6em 0em;
+  margin: 0em 0em 0em 0em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* max-width: 20%; */
+
   opacity: 20%;
 }
 .footer__container a {
@@ -29,12 +37,13 @@
 .footer__social {
   text-decoration: none;
   display: flex;
-  flex-direction: column;
-  margin-top: 1em;
-  justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
+  /* margin-top: 1em; */
+  justify-content: center;
 }
 .footer_social_nav {
-  max-width: 90vw;
+  max-width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
