--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -7,8 +7,8 @@
   align-items: center;
 
   font-weight: 400;
-  padding: 1em;
-  margin: 1em 0em 0em 0em;
+  padding: 1em 0 0 1em;
+  margin: 2.5em 0em 0em 0em;
 }
 .footer__container hr {
   color: #ffffff;
