--- a/src/pages/landing/styles/get-in-touch.css
+++ b/src/pages/landing/styles/get-in-touch.css
@@ -1,19 +1,30 @@
 .get-in-touch__container {
-  max-width: 100vw;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(19em, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(2em, 1fr));
+  /* width: 50%; */
+
+  /* display: grid;
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(19em, 1fr)
+  );
+  grid-template-rows: repeat(
+    auto-fit,
+    minmax(2em, 1fr)
+  ); */
   align-items: center;
   justify-content: space-around;
   text-align: center;
   color: #fff;
-  padding: 0em 1em 5em 1em;
+  padding: 2em 1em 2em 1em;
   background-color: #3aae84;
   margin: 1em;
   border-radius: 1em;
-  box-shadow: 1.5px 2px 20px 1px rgb(0, 0, 0, 0.3);
+  padding-bottom: 3em;
+  box-shadow: 1.5px 2px 20px 1px
+    rgb(0, 0, 0, 0.3);
+  /* justify-items: center; */
 }
 .get-in-touch__img img {
+  display: none;
   object-fit: contain;
   min-width: 10em;
   margin: 0;
@@ -43,21 +54,21 @@
 
 @media screen and (min-width: 693px) {
   .get-in-touch__container {
-    max-width: 100vw;
     display: grid;
     grid-auto-flow: column;
     /* grid-template-columns: repeat(auto-fit, minmax(25em, 1fr)); */
-    grid-template-rows: repeat(auto-fit, minmax(2em, 1fr));
-    /* justify-content: center;
-    align-items: center; */
+    grid-template-rows: repeat(
+      auto-fit,
+      minmax(2em, 1fr)
+    );
     margin: 0 3em;
-    padding: 0 2em;
+    padding-left: 2em;
+    padding-right: 2em;
   }
   .get-in-touch-text--container {
     justify-content: center;
     align-items: center;
     margin: 0 0 2.5em;
-    /* max-width:25em; */
     text-align: center;
   }
   .get-in-touch__title {
@@ -76,11 +87,16 @@
     align-content: space-around;
     padding:0 10em;
   } */
+  .get-in-touch__img img {
+    display: block;
+    object-fit: contain;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    /* transform: translateX(-2em); */
+  }
   .get-in-touch-text--container {
     margin: 1em;
-
-    /* padding:2em 0 0 10em; */
-    /* max-width:100%; */
     text-align: left;
   }
   .get-in-touch__title {
@@ -97,23 +113,12 @@
 }
 @media screen and (min-width: 1004px) {
   .get-in-touch__container {
-    display: flex;
+    /* width: 60em; */
+    /* display: flex;
     flex-flow: row-reverse;
-    justify-content: space-around;
+    justify-content: center;
     align-content: space-around;
-    padding: 0 10em;
-  }
-  .get-in-touch-text--container {
-    /* margin-left:40em; */
-    /* padding:2em 0 0 10em; */
-    width: 30em;
-    text-align: left;
-  }
-  .get-in-touch__title {
-    font-size: 20px;
-  }
-  .get-in-touch__description {
-    font-size: 20px;
-    min-width: 20em;
+    align-items: center; */
+    /* padding: 0 10em; */
   }
 }
