--- a/src/pages/landing/styles/hero-view.css
+++ b/src/pages/landing/styles/hero-view.css
@@ -18,7 +18,7 @@
 
 .hero__title {
   max-width: 12em;
-  font-size: 40px;
+  font-size: 10vw;
   font-weight: 900;
   text-align: center;
 }
@@ -30,8 +30,8 @@
 }
 .hero__content {
   max-width: 20em;
-  margin: 1em 0 1.5em 0;
-  font-size: 16px;
+  margin: 1em 0 2.5em 0;
+  font-size: 4vw;
   text-align: center;
 }
 /* @ Screen 400 */
@@ -94,8 +94,8 @@
   .hero {
     background-color: #ffffff;
     color: #000;
-    height: 70vh;
-    justify-content: start;
+    max-height: 70vh;
+    justify-content: center;
     margin-top: 4em;
   }
 
@@ -105,13 +105,14 @@
   .hero__title {
     margin-top: 1em;
     max-width: 19em;
-    font-size: 40px;
+    font-size: 5.5vw;
     font-weight: 900;
     text-align: center;
+    /* margin-bottom: 0.2em; */
   }
   .hero__content {
     max-width: 33em;
-    margin: 1em 0 1.5em 0;
+    margin: 1.2em 0 3em 0;
     font-size: 20px;
     text-align: center;
   }
@@ -121,6 +122,7 @@
 
 @media screen and (min-width: 1004px) {
   .hero {
+    height: 100vh;
     margin: 0 5em;
     margin-top: 2.9em;
     background-color: #ffffff;
@@ -129,7 +131,7 @@
     align-items: flex-start;
     flex-direction: row;
     text-align: start;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-around;
     /* text-align: center; */
   }
@@ -140,13 +142,15 @@
   }
   .hero__title {
     width: 10em;
-    font-size: 57px;
+    font-size: 4.5vw;
     text-align: left;
   }
 
   .hero__content {
     width: 40em;
     text-align: left;
+    margin-bottom: 3em;
+    font-size: 1.23vw;
   }
   /* this is not working */
   .hero__btn button {
