--- a/src/pages/landing/styles/our-partners.css
+++ b/src/pages/landing/styles/our-partners.css
@@ -18,14 +18,25 @@
 
 .our-partners__contanier--imgs {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(12em, 1fr));
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(12em, 1fr)
+  );
   grid-gap: 10px;
   justify-content: space-around;
   align-items: center;
-  grid-auto-rows: repeat(auto-fit, minmax(5em, 1fr));
+  grid-auto-rows: repeat(
+    auto-fit,
+    minmax(5em, 1fr)
+  );
 }
 @media screen and (min-width: 768px) {
   .our-partners__title {
     font-size: 1.5em;
+    margin-bottom: 3em;
+  }
+  .our-partners__container {
+    margin-bottom: 4em;
+    max-height: 100vh;
   }
 }
