--- a/src/pages/landing/styles/what-we-do.css
+++ b/src/pages/landing/styles/what-we-do.css
@@ -7,16 +7,23 @@
   justify-content: center;
   align-items: center;
 }
-.what-we-do__item {
+.what-we-do__items {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(18em, 1fr)
+  );
   grid-gap: 1em;
   text-align: center;
   /* justify-content: center; */
   align-items: center;
-  grid-template-rows: repeat(auto-fit, minmax(10em, 1fr));
+  grid-template-rows: repeat(
+    auto-fit,
+    minmax(10em, 1fr)
+  );
 }
-.what-we-do__ {
+
+.what-we-do_item {
   font-size: 16px;
   font-style: normal;
   font-weight: normal;
@@ -62,5 +69,10 @@
 @media screen and (min-width: 768px) {
   .what-we-do {
     height: 100vh;
+    /* margin: 0em 2em; */
+  }
+  .what-we-do_item p {
+    /* width: 80vw; */
+    /* width: 1em; */
   }
 }
