--- a/src/pages/landing/styles/what-we-do.css
+++ b/src/pages/landing/styles/what-we-do.css
@@ -1,11 +1,11 @@
 .what-we-do {
-  margin-top: 2.5em;
-  width: 100%;
-
+  /* margin-top: 2.5em; */
+  /* width: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 5rem;
 }
 .what-we-do__items {
   display: grid;
@@ -53,11 +53,11 @@
 @media screen and (min-width: 540px) {
   .what-we-do__section__title {
     font-size: 1.5em;
-    margin-bottom: 1.5em;
+    margin-bottom: 3.5em;
   }
   .what-we-do__title {
-    margin-top: 1em;
-    max-width: 19em;
+    /* margin-top: 1em; */
+    /* max-width: 19em; */
     font-size: 2em;
     font-weight: 900;
     text-align: center;
@@ -67,12 +67,4 @@
   }
 }
 @media screen and (min-width: 768px) {
-  .what-we-do {
-    height: 100vh;
-    /* margin: 0em 2em; */
-  }
-  .what-we-do_item p {
-    /* width: 80vw; */
-    /* width: 1em; */
-  }
 }
