--- a/src/pages/landing/styles/what-we-do.css
+++ b/src/pages/landing/styles/what-we-do.css
@@ -1,6 +1,4 @@
 .what-we-do {
-  /* margin-top: 2.5em; */
-  /* width: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -15,7 +13,7 @@
   );
   grid-gap: 1em;
   text-align: center;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: center;
   grid-template-rows: repeat(
     auto-fit,
