--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -7,7 +7,7 @@
   align-items: center;
 
   font-weight: 400;
-  padding: 1em 0 0 1em;
+  padding-top: 1em;
   margin: 2.5em 0em 0em 0em;
 }
 .footer__container hr {
@@ -17,16 +17,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* max-width: 20%; */
 
   opacity: 20%;
 }
 .footer__container a {
   text-decoration: none;
   color: #ffffff;
-  padding: 0.5em 1.4em;
-  /* margin: 0em 0em 1.6em 0em; */
-  /* opacity: 20 */
+  padding: 0.5rem;
+  /*margin: 0.3rem;*/
 }
 .footer__copywrite_container {
   margin: 2em 0em;
@@ -34,20 +32,14 @@
   order: 2;
 }
 
-.footer__social {
-  text-decoration: none;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  /* margin-top: 1em; */
-  justify-content: center;
-}
+
 .footer_social_nav {
   max-width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 .footer__labels {
   max-width: 90vw;
@@ -58,19 +50,5 @@
 }
 
 @media screen and (min-width: 1004px) {
-  /* .footer__container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0;
-    font-weight: 400;
-    margin: 3.6em 0 0 0;
-  } */
-  /* .footer__copywrite_container {
-    order: 0;
-  } */
-  .footer__social a {
-    /* margin: 0 2.3em; */
-  }
+  /*  */
 }
