--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -12,6 +12,11 @@
   text-align: center;
   padding: 0.4em 1em 0em 1em;
   background-color: white;
+  position: fixed;
+  top: 0 ;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
 .nav__branding_menu {
   display: flex;
