--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -23,6 +23,7 @@
   width: 100%;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 .nav__brand_button {
   border: none;
