--- a/src/pages/landing/styles/hero-view.css
+++ b/src/pages/landing/styles/hero-view.css
@@ -7,6 +7,7 @@
   background-color: #3aae84;
   color: #fff;
   margin-bottom: 4rem;
+  margin-top: 2rem;
 }
 .hero__text {
   display: flex;
@@ -17,9 +18,9 @@
 
 .hero__title {
   max-width: 12em;
-  font-size: 10vw;
+  font-size: 13vw;
   font-weight: 900;
-  text-align: center;
+  text-align: start;
 }
 .hero__img--one {
   display: none;
@@ -30,8 +31,8 @@
 .hero__content {
   max-width: 20em;
   margin: 1em 0 2.5em 0;
-  font-size: 4vw;
-  text-align: center;
+  font-size: 4.8vw;
+  text-align: start;
 }
 /* @ Screen 400 */
 
@@ -44,7 +45,19 @@
     margin-right: 2em;
   }
 }
+@media screen and (min-width: 401px){
+.hero__title {
+  font-size: 10vw;
 
+   margin: 0 0.8em;
+}
+.hero__content {
+  font-size: 4.8vw;
+
+    margin-left: 2em;
+    margin-right: 2em;
+}
+}
 /* @ Screen 540px */
 
 @media screen and (min-width: 540px) {
@@ -79,6 +92,8 @@
     font-size: 40px;
     font-weight: 900;
     text-align: center;
+   margin-left: 0 ;
+
   }
   .hero__content {
     max-width: 33em;
@@ -120,7 +135,6 @@
     margin-top: 2.9em;
     background-color: #ffffff;
     color: #000;
-    height: auto;
     align-items: flex-start;
     flex-direction: row;
     text-align: start;
@@ -139,14 +153,14 @@
   }
 
   .hero__content {
-    width: 40em;
+    width: 25em;
     text-align: left;
     margin-bottom: 3em;
   }
   /* this is not working */
   .hero__btn button {
     display: flex;
-    justify-items: center;
+    justify-content: center;
     align-items: center;
     text-align: center;
   }
@@ -155,9 +169,10 @@
   }
   .hero__img {
     display: block;
+    object-fit: contain;
   }
   .hero__img div img {
     object-fit: contain;
-    max-width: 100%;
+    min-width: 100%;
   }
 }
